--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -35,8 +35,26 @@
     align-content: center;
 }
 
+.topicos__item:hover {
+    background: var(--laranja-hover);
+}
+
 @media screen and (min-width: 768px) {
     .topicos__box {
         padding: 1.5rem 5rem;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .topicos__titulo {
+        font-size: 1.5rem;
+        margin: 1.5rem;
+    }
+    .topicos__box {
+    }
+    .topicos__box-item {
+        align-self: center;
+        width: 40vw;
+        margin-bottom: 2rem;
     }
 }
