--- a/styles/header.css
+++ b/styles/header.css
@@ -38,7 +38,18 @@
     display: none;
     position: absolute;
     top: 100%;
-    width: 60vw;
+    width: 50vw;
+    z-index: 1000;
+    box-shadow: 6px 12px 12px rgba(0, 0, 0, 0.2);
+}
+
+.lista-menu__item:hover {
+    background: var(--azul-degrade);
+}
+
+.lista-menu__item:hover > .lista-menu__link {
+    background: var(--branco);
+    background-clip: text;
 }
 
 .container__botao:checked ~ .lista__menu {
